initial section hero finished

--- a/scss/faq.css
+++ b/scss/faq.css
@@ -1,1 +1,141 @@
-/*# sourceMappingURL=faq.css.map */
+.faq-hero-section {
+  padding-top: 198px;
+  padding-bottom: 270px;
+  background-image: url(../images/faq-bg-cat.png);
+  background-position: calc(50% + 470px) calc(50% - 450px);
+  background-repeat: no-repeat;
+}
+.faq-hero-section__start {
+  margin-left: 100px;
+}
+.faq-hero-section__title {
+  margin-top: 0;
+  margin-bottom: 27px;
+  font-weight: 700;
+  font-size: 70px;
+  line-height: 64px;
+  color: #333333;
+}
+.faq-hero-section__subtitle {
+  width: 100%;
+  max-width: 447px;
+  margin-top: 0;
+  margin-bottom: 35px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  color: #949494;
+}
+
+.faq-hero-section__btn {
+  display: flex;
+  align-items: center;
+  padding: 14px 38px;
+  margin-bottom: 64px;
+  background-color: #78C0DE;
+  border-radius: 3px;
+  border: none;
+}
+
+.faq-hero-section-btn__img {
+  margin-right: 6px;
+}
+
+.faq-hero-section-btn__title {
+  margin: 0;
+  font-size: 16px;
+  line-height: 21px;
+  color: #FFFFFF;
+}/*# sourceMappingURL=faq.css.map */
+
+
+.faq-details{
+  width: 100%;
+  max-width: 752px;
+  margin-top: 63px;
+  margin-bottom: 18px;
+  padding: 23px 41px 32px 63px;
+  background-color: #FFFFFF;
+  border: 1px solid #F3F3F3;
+  border-radius: 5px;
+}
+
+.faq-summery{
+  list-style: none;
+}
+
+.details-top__text{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 295px;
+}
+.details-top__time{
+  position: relative;
+  margin-left: 30px;
+  font-size: 14px;
+  line-height: 22px;
+  color: #333333;
+}
+
+.details-top__time::before{
+  position: absolute;
+  top: -5px;
+  left: -30px;
+  content: url(../images/panja.svg);
+  background-repeat: no-repeat;
+  width: 23px;
+  height: 20px;
+}
+
+.details-top__title{
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 22px;
+  display: flex;
+  align-items: center;
+  text-align: right;
+  letter-spacing: 0.08em;
+  color: #78C0DE;
+}
+
+.summery__title{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 22px;
+  color: #333333;
+  
+}
+
+.summery__title::after{
+  display: inline-block;
+  margin-left: 93px;
+  content: url(../images/arrow-bottom.svg);
+}
+
+details[open]>summary >.summery__title::after{
+  transform: rotate(180deg);
+}
+
+.faq-details:nth-child(even)>.faq-summery>.details-top__text>.details-top__time::before{
+  content: url(../images/panja.svg);
+}
+
+details[disabled] summary{
+  pointer-events: none;
+  user-select: none;
+  opacity: 0.6;
+}
+
+details[disabled] summary>.summery__title::after{
+  /* display: inline-block; */
+  /* margin-left: 93px; */
+  content: url(../images/lock.svg);
+  /* transform: rotate(90deg); */
+}
