--- a/css/initial-inspection.css
+++ b/css/initial-inspection.css
@@ -25,6 +25,14 @@
   url("../fonts/FuturaPT-Medium.woff2") format("woff2"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
+:root {
+  --header-bg-color: #fff;
+  --main-bg-color: #f9f9f9;
+  --main-text-color: #333333;
+  --main-desc-color: #949494;
+  --main-active-color: #ffbd54;
+}
+
 /********** MAIN START **************/
 /* ******** INITAL HERO SECTION START ****** */
 .inital-hero-section{
@@ -34,19 +42,55 @@
   background-size: contain;
 }
 
+/* ******** INITAL HERO SECTION END ****** */
+
+
+/* ****** INSPECTION START **** */
+
+.inspection-section-wrapper{
+  display: flex;
+}
+
+.inspection-section-start{
+  margin-left: 223px;
+}
+
 .tab{
-  /* margin-top: 1000px; */
+  display: flex;
+  gap: 18px;
   list-style: none;
+  margin-bottom: 33px;
 }
 
 .tab__link{
-  color: #000;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 18px;
+  color: var(--main-desc-color);
   text-decoration: none;
 }
 
+.tab__item:first-child:after{
+  content: "";
+  display: inline-block;
+  margin-left: 7px;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background-color: var(--main-active-color);
+}
+.tab__item:nth-child(2):after{
+  content: "";
+  display: inline-block;
+  margin-left: 7px;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background-color: var(--main-active-color);
+}
+
 .tab__item--active .tab__link{
-  border-bottom: 2px solid #000fff;
-  background-color: #ff1493;
+  color: #000;
 }
 
 .panel{
@@ -61,11 +105,18 @@
   display: block;
 }
 
-.bg{
-  width: 300px;
-  height: 300px;
-  background-image: url("https://picsum.photos/id/237/300/300");
-  background-repeat: no-repeat;
+.panel__item-title{
+  margin-top: 0;
+  margin-bottom: 28px;
+  font-weight: 700;
+  font-size: 70px;
+  line-height: 64px;
+  color: var(--main-text-color);
 }
-/* ******** INITAL HERO SECTION END ****** */
-/* MAIN END */
+
+.panel__item-title-span{
+  color: var(--main-active-color);
+}
+
+/* ****** INSPECTION END **** */
+/********* MAIN END **********/
